--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
-@import url("./styles/mainpage.css");
 @import url("./styles/navbar.css");
+@import url("./styles/mainpage.css");
+@import url("./styles/aboutpage.css");
+@import url("./styles/contactpage.css");
+
 *,
 *::after,
 *::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
