--- a/src/styles/mainpage.css
+++ b/src/styles/mainpage.css
@@ -1,5 +1,6 @@
 .main--page {
-  height: calc(100vh - 80px);
+  /* height: calc(100vh - 80px); */
+  height: 100vh;
   /* background-color: black; */
   color: white;
 }
